--- a/styles.css
+++ b/styles.css
@@ -105,3 +105,27 @@ button:hover {
     color: #721c24;
 }
 
+.overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8); /* Semi-transparent background */
+    z-index: 1000;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+/* Styling for the content inside the overlay */
+.overlay-content {
+    background: white;
+    padding: 20px;
+    border-radius: 8px;
+    width: 700px;
+    margin: auto;
+}
+
+
